styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
    padding: 0;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
}

.title-hero {
    text-shadow: 4px 4px 15px rgba(255,255,255,.75);
}

.bg-shape {
    position: absolute;
    left: 0;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    z-index: -1;
}

.swiper-slide-next, .swiper-slide-prev {
    @apply invisible;
}

.flippable-card-container {
    perspective: 1000px;
}

.card {
    transform-style: preserve-3d;
    position: relative;
    user-select: text;
    cursor: pointer;
    @apply min-h-max;
}

.card-front {
}

.card-back {
    transform: rotateY(180deg);
}

.card-front,
.card-back {
    position: absolute;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}






.flip-exit {
    transform: rotateY(0deg);
}

.flip-exit-active {
    transform: rotateY(180deg);
    transition: transform 300ms;
    transition-timing-function: cubic-bezier(.57,.21,.69,1.25);
}

.flip-exit-done {
    transform: rotateY(180deg);
}

.flip-enter {
    transform: rotateY(180deg);
}

.flip-enter-active {
    transform: rotateY(0deg);
    transition: transform 300ms;
    transition-timing-function: cubic-bezier(.57,.21,.69,1.25);
}

.flip-enter-done {
    transform: rotateY(0deg);
}

